syntax = "proto3";
package io.apicurio.schema.validation.protobuf.ref;

message MessageExample {

  string key = 1;
  string value = 2;

}